feat : tambah bulking update master store
